added a new.ejs view with a basic form for user to search by author or title, created new route for new.ejs

--- a/views/searches/new.ejs
+++ b/views/searches/new.ejs
@@ -11,6 +11,18 @@
   </head>
 <body>
 
-
+  <form action="/searches/new" method="GET">
+    <label>
+      Search By Title
+      <input type="radio" name="filter" value="title" required>
+    </label>
+    <label>
+      Search By Author
+      <input type="radio" name="filter" value="author">
+    </label>
+      <input type="text" name="" placeholder="Enter search terms">
+    <button type="submit">Submit</button>
+  </form>
+  
 </body>
 </html>
