--- a/views/searches/show.ejs
+++ b/views/searches/show.ejs
@@ -10,7 +10,13 @@
     <link rel="stylesheet" type="text/css" href="../../styles/modules.css"/>
   </head>
 <body>
-
-
+  <h1>Search Results</h1>
+  <% bookResults.forEach( book => { %>
+    <img src="<%= book.image_url %>">
+    <h3>Title: <%= book.title %> </h3>
+    <h3>Author: <%= book.author %> </h3>
+    <p> <%= book.description %> </p>
+    <p> <%= book.isbn %> </p>
+  <% }); %>
 </body>
 </html>
