--- a/views/searches/new.ejs
+++ b/views/searches/new.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search for books!</title>
     <link rel="stylesheet" type="text/css" href="../../styles/reset.css"/>
     <link rel="stylesheet" type="text/css" href="../../styles/base.css"/>
     <link rel="stylesheet" type="text/css" href="../../styles/layout.css"/>
