--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,11 @@
 </head>
 <body>
 
-  <h1>Hello World!</h1>
+  <h1>My Book Collection</h1>
+
+  <main class="book-container">
+    
+  </main>
   
 </body>
 </html>
