Created new layouts folder in views with partials for <header> and <footer> and included those in each full view. Put a <nav> in the <header> with links to home and the search form. Created a GET with the route of / to redirect user to the index.ejs view upon page load.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../../styles/layout.css"/>
   <link rel="stylesheet" type="text/css" href="../../styles/modules.css"/>
 </head>
+<%- include('../layouts/header') %>
 <body>
 
   <h1>My Book Collection</h1>
@@ -16,6 +17,7 @@
   <main class="book-container">
     
   </main>
-  
+
 </body>
+<%- include('../layouts/footer') %>
 </html>
