--- a/views/searches/show.ejs
+++ b/views/searches/show.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../styles/layout.css"/>
     <link rel="stylesheet" type="text/css" href="../../styles/modules.css"/>
   </head>
+  <%- include('../layouts/header') %>
   <body>
 
     <h1>Search Results</h1>
@@ -19,4 +20,5 @@
       <% }); %>
     </main>
   </body>
+  <%- include('../layouts/footer') %>
 </html>
