Reworked homepage to display all books saved in database. Included a partial in index.ejs to render each book with same style. Created function to handle pulling data from database and reworked GET route to display on load.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,10 @@
   <h1>My Book Collection</h1>
 
   <main class="book-container">
-    
+    <h3> Total Books: <%= sqlResults.rowCount %>  </h3>
+    <% sqlResults.rows.forEach(book => { %>
+      <%- include('../partials/book-details', {book}) %>
+    <% }); %> 
   </main>
 
 </body>
